--- a/package.json
+++ b/package.json
@@ -10,10 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@smastrom/react-rating": "^1.3.1",
+    "@tanstack/react-query": "^4.32.0",
+    "axios": "^1.4.0",
+    "firebase": "^10.1.0",
+    "hamburger-react": "^2.5.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.2",
+    "react-icons": "^4.10.1",
+    "react-loader-spinner": "^5.3.4",
+    "react-notifications-component": "^4.0.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.14.2",
     "sort-by": "^1.2.0"
   },
